homepage main banner overflow fix

--- a/src/components/FirstBanner/FirstBanner.module.scss
+++ b/src/components/FirstBanner/FirstBanner.module.scss
@@ -1,5 +1,9 @@
 @import '../../styles/utils/mixins';
 
+.firstBanner {
+  overflow: hidden;
+}
+
 /*#region firstSlide*/
 .firstSlide {
   height: 190px;
